--- a/Pacmen.html
+++ b/Pacmen.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
+<html>
+
 <head>
-  <head>
-    <link rel="stylesheet" type="text/css" href="./eyes.css">
-</head>
+    <title>Pacmen</title>
   
-  <body>
-      <div id='game'>
+    <script src=".Pac.js"></script>
+</head>
+
+<body>
+    <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
         <button onclick='update()' width='200' height='30'>Start Game</button>
+    </div>
+</body>
 
-      </div>
-  </body>
-<script src="./Pacmen.js"></script>
 </html>
+
+
