--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Pacmen</title>
-  
-    <script src=".Pac.js"></script>
+    <!-- DO NOT CHANGE THIS LINE OF CODE -->
+    <script src="./pacmen.js"></script>
 </head>
 
 <body>
