--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
 <html>
+<SCRIPT>  
+    var pos = 0;
+    const pacArray = [
+        ['PacMan1.png', 'PacMan2.png'],
+        ['PacMan3.png', 'PacMan4.png']
+    ];
+    var direction = 0;
+    var focus = 0;'
 
-<head>
-    <title>Pacmen</title>
-    <!-- DO NOT CHANGE THIS LINE OF CODE -->
-    <script src="./pacmen.js"></script>
-</head>
+    function Run() {
+    let img = document.getElementById("PacMan");
+    let imgWidth = img.width
+    focus = (focus + 1) % 2;
+    direction = checkPageBounds(direction, imgWidth);
+    img.src = pacArray[direction][focus];
+        if (direction) {
+            pos -= 20;
+            img.style.left = pos + "px";
+        } else {
+            pos += 20;
+            img.style.left = pos + 'px';
+        }
+
+        setTimeout(Run, 200);
+    }
+
+    function checkPageBounds(direction, imgWidth) {
+        let pageWidth = window.innerWidth;
+        if (direction == 0 && pos + imgWidth > pageWidth) direction = 1;
+        if (direction == 1 && pos < 0) direction = 0;
+
+        return direction;
+    }
+    
+        function checkPageBounds(direction, imgWidth) {
+        let pageWidth = window.innerWidth;
+        if (direction == 0 && pos + imgWidth > pageWidth) direction = 1;
+        if (direction == 1 && pos < 0) direction = 0;
+
+        return direction;
+    }
+</SCRIPT>
 
 <body>
-    <div id='game'>
-        <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
-        <button onclick='update()' width='200' height='30'>Start Game</button>
-    </div>
+    <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
 </body>
 
 </html>
+
+
 
 
